feat(agent): 优化记忆智能与能力体验