@@ -12,13 +12,13 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InOrder;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.dao.DataAccessException;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.core.RowMapper;
 
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
 import java.util.List;
+import java.util.Set;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatCode;
@@ -26,10 +26,9 @@ import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
 /**
- * VectorSearcher 单元测试 — 覆盖构造初始化（vec0 表创建/降级）、searchEntities（sqlite-vec 正常路径、
- * 阈值过滤、空结果、vec 异常降级 JVM、embedding 异常返回空）、upsertEntityVector（先删后插、扩展未加载跳过、
- * embedding 失败不写库）、deleteEntityVector（正常删除、扩展未加载跳过、删除失败不抛异常）、
- * 结果排序/topK 截断、以及边界条件。
+ * VectorSearcher 单元测试 — 覆盖构造初始化、searchEntities sqlite-vec 正常路径、
+ * 阈值过滤、空结果、失败暴露、upsertEntityVector 先删后插、deleteEntityVector 正常删除、
+ * topK 参数传递以及边界条件。
  *
  * @author zsg
  * @since 2026-04-03
@@ -82,31 +81,38 @@ class VectorSearcher_单元测试 {
         }
 
         @Test
-        void vec扩展未加载时跳过表创建() {
-            new VectorSearcher(vectorJdbcTemplate, embeddingRouter, false, DIMENSIONS);
-
-            verify(vectorJdbcTemplate, never()).execute(anyString());
+        void vec扩展未加载时构造失败() {
+            org.assertj.core.api.Assertions.assertThatThrownBy(() ->
+                    new VectorSearcher(vectorJdbcTemplate, embeddingRouter, false, DIMENSIONS))
+                    .isInstanceOf(IllegalStateException.class)
+                    .hasMessageContaining("sqlite-vec 扩展未加载");
         }
 
         @Test
-        void vec0表创建失败时不抛出异常_降级运行() {
+        void vec0表创建失败时构造失败() {
             doThrow(new RuntimeException("sqlite-vec 扩展不可用"))
                     .when(vectorJdbcTemplate).execute(anyString());
 
-            assertThatCode(() ->
-                    new VectorSearcher(vectorJdbcTemplate, embeddingRouter, true, DIMENSIONS)
-            ).doesNotThrowAnyException();
+            org.assertj.core.api.Assertions.assertThatThrownBy(() ->
+                    new VectorSearcher(vectorJdbcTemplate, embeddingRouter, true, DIMENSIONS))
+                    .isInstanceOf(RuntimeException.class)
+                    .hasMessageContaining("sqlite-vec 扩展不可用");
         }
 
         @Test
-        void vec0表创建失败后isVecExtensionLoaded仍返回true() {
-            // vecExtensionLoaded 是构造参数，不因 DDL 失败而改变
-            doThrow(new RuntimeException("DDL 失败"))
-                    .when(vectorJdbcTemplate).execute(anyString());
+        void embeddingRouter缺失时构造失败() {
+            org.assertj.core.api.Assertions.assertThatThrownBy(() ->
+                    new VectorSearcher(vectorJdbcTemplate, null, true, DIMENSIONS))
+                    .isInstanceOf(NullPointerException.class)
+                    .hasMessageContaining("embeddingRouter 不能为空");
+        }
 
-            var searcher = new VectorSearcher(vectorJdbcTemplate, embeddingRouter, true, DIMENSIONS);
-
-            assertThat(searcher.isVecExtensionLoaded()).isTrue();
+        @Test
+        void embeddingDimensions非法时构造失败() {
+            org.assertj.core.api.Assertions.assertThatThrownBy(() ->
+                    new VectorSearcher(vectorJdbcTemplate, embeddingRouter, true, 0))
+                    .isInstanceOf(IllegalArgumentException.class)
+                    .hasMessageContaining("embeddingDimensions 必须大于 0");
         }
     }
 
@@ -125,10 +131,11 @@ class VectorSearcher_单元测试 {
         }
 
         @Test
-        void 扩展未加载返回false() {
-            var searcher = new VectorSearcher(vectorJdbcTemplate, embeddingRouter, false, DIMENSIONS);
-
-            assertThat(searcher.isVecExtensionLoaded()).isFalse();
+        void 扩展未加载时无法构造() {
+            org.assertj.core.api.Assertions.assertThatThrownBy(() ->
+                    new VectorSearcher(vectorJdbcTemplate, embeddingRouter, false, DIMENSIONS))
+                    .isInstanceOf(IllegalStateException.class)
+                    .hasMessageContaining("sqlite-vec 扩展未加载");
         }
     }
 
@@ -232,171 +239,106 @@ class VectorSearcher_单元测试 {
     }
 
     // ═════════════════════════════════════════════════
-    //  searchEntities — 降级和异常处理
+    //  searchEntities — 失败暴露
     // ═════════════════════════════════════════════════
 
     @Nested
-    class 向量搜索_降级与异常 {
+    class 向量搜索_失败暴露 {
 
         @Test
-        void embedding异常时返回空列表_不查询数据库() {
+        void embedding异常时应抛出且不查询数据库() {
             var searcher = new VectorSearcher(vectorJdbcTemplate, embeddingRouter, true, DIMENSIONS);
             when(embeddingRouter.embed(anyString(), any(), any(), any()))
                     .thenThrow(new RuntimeException("向量服务不可用"));
 
-            var results = searcher.searchEntities("测试", 5, 0.5f);
+            org.assertj.core.api.Assertions.assertThatThrownBy(() ->
+                    searcher.searchEntities("测试", 5, 0.5f))
+                    .isInstanceOf(RuntimeException.class)
+                    .hasMessageContaining("向量服务不可用");
 
-            assertThat(results).isEmpty();
             // execute 在构造器中被调用（创建表），但 query 不应被调用
             verify(vectorJdbcTemplate, never()).query(anyString(), any(RowMapper.class), any(), anyInt());
         }
 
-        @SuppressWarnings("unchecked")
         @Test
-        void vec搜索异常时降级为JVM暴力搜索() {
+        void vec搜索异常时应抛出() {
             var searcher = new VectorSearcher(vectorJdbcTemplate, embeddingRouter, true, DIMENSIONS);
-            when(embeddingRouter.embed("降级测试", EmbeddingUseCase.MEMORY, null, null))
-                    .thenReturn(uniformVector(1.0f));
-
-            // vec KNN 搜索抛异常
-            when(vectorJdbcTemplate.query(anyString(), any(RowMapper.class), any(), anyInt()))
-                    .thenThrow(new RuntimeException("vec 查询失败"));
-            // JVM fallback 返回结果
-            when(vectorJdbcTemplate.query(anyString(), any(RowMapper.class)))
-                    .thenReturn(List.of(new VectorSearchResult("fallback-1", 0.85f)));
-
-            var results = searcher.searchEntities("降级测试", 5, 0.5f);
-
-            assertThat(results).hasSize(1);
-            assertThat(results.getFirst().entityId()).isEqualTo("fallback-1");
-        }
-
-        @SuppressWarnings("unchecked")
-        @Test
-        void vec搜索和JVM暴力搜索都失败时返回空列表() {
-            var searcher = new VectorSearcher(vectorJdbcTemplate, embeddingRouter, true, DIMENSIONS);
-            when(embeddingRouter.embed("双重失败", EmbeddingUseCase.MEMORY, null, null))
+            when(embeddingRouter.embed("查询失败", EmbeddingUseCase.MEMORY, null, null))
                     .thenReturn(uniformVector(1.0f));
 
             when(vectorJdbcTemplate.query(anyString(), any(RowMapper.class), any(), anyInt()))
                     .thenThrow(new RuntimeException("vec 查询失败"));
-            when(vectorJdbcTemplate.query(anyString(), any(RowMapper.class)))
-                    .thenThrow(new RuntimeException("JVM 暴力搜索也失败"));
 
-            var results = searcher.searchEntities("双重失败", 5, 0.5f);
-
-            assertThat(results).isEmpty();
+            org.assertj.core.api.Assertions.assertThatThrownBy(() ->
+                    searcher.searchEntities("查询失败", 5, 0.5f))
+                    .isInstanceOf(RuntimeException.class)
+                    .hasMessageContaining("vec 查询失败");
         }
 
         @Test
-        void vec扩展未加载时JVM暴力搜索直接返回空列表() {
-            var searcher = new VectorSearcher(vectorJdbcTemplate, embeddingRouter, false, DIMENSIONS);
-            when(embeddingRouter.embed("无向量数据", EmbeddingUseCase.MEMORY, null, null))
-                    .thenReturn(uniformVector(1.0f));
+        void embedding返回null时应直接失败() {
+            var searcher = new VectorSearcher(vectorJdbcTemplate, embeddingRouter, true, DIMENSIONS);
+            when(embeddingRouter.embed("坏向量", EmbeddingUseCase.MEMORY, null, null))
+                    .thenReturn(null);
 
-            var results = searcher.searchEntities("无向量数据", 5, 0.5f);
+            org.assertj.core.api.Assertions.assertThatThrownBy(() ->
+                    searcher.searchEntities("坏向量", 5, 0.5f))
+                    .isInstanceOf(IllegalStateException.class)
+                    .hasMessageContaining("向量检索查询返回 null 向量");
+        }
 
-            assertThat(results).isEmpty();
+        @Test
+        void embedding返回维度不匹配时应直接失败() {
+            var searcher = new VectorSearcher(vectorJdbcTemplate, embeddingRouter, true, DIMENSIONS);
+            when(embeddingRouter.embed("坏维度", EmbeddingUseCase.MEMORY, null, null))
+                    .thenReturn(new float[]{1.0f, 2.0f});
+
+            org.assertj.core.api.Assertions.assertThatThrownBy(() ->
+                    searcher.searchEntities("坏维度", 5, 0.5f))
+                    .isInstanceOf(IllegalStateException.class)
+                    .hasMessageContaining("向量检索查询返回向量维度不匹配");
+        }
+
+        @Test
+        void embedding返回NaN时应直接失败() {
+            var searcher = new VectorSearcher(vectorJdbcTemplate, embeddingRouter, true, DIMENSIONS);
+            when(embeddingRouter.embed("坏数值", EmbeddingUseCase.MEMORY, null, null))
+                    .thenReturn(new float[]{1.0f, Float.NaN, 1.0f, 1.0f});
+
+            org.assertj.core.api.Assertions.assertThatThrownBy(() ->
+                    searcher.searchEntities("坏数值", 5, 0.5f))
+                    .isInstanceOf(IllegalStateException.class)
+                    .hasMessageContaining("向量检索查询返回非法向量值");
         }
 
         @SuppressWarnings("unchecked")
         @Test
-        void DataAccessException也能触发降级() {
+        void vec查询返回null时应直接失败() {
             var searcher = new VectorSearcher(vectorJdbcTemplate, embeddingRouter, true, DIMENSIONS);
-            when(embeddingRouter.embed(anyString(), any(), isNull(), isNull()))
+            when(embeddingRouter.embed("null结果", EmbeddingUseCase.MEMORY, null, null))
                     .thenReturn(uniformVector(1.0f));
             when(vectorJdbcTemplate.query(anyString(), any(RowMapper.class), any(), anyInt()))
-                    .thenThrow(new DataAccessException("连接池耗尽") {});
-            when(vectorJdbcTemplate.query(anyString(), any(RowMapper.class)))
-                    .thenReturn(List.of(new VectorSearchResult("recovered", 0.75f)));
+                    .thenReturn(null);
 
-            var results = searcher.searchEntities("DA异常", 5, 0.5f);
-
-            assertThat(results).hasSize(1);
-            assertThat(results.getFirst().entityId()).isEqualTo("recovered");
-        }
-    }
-
-    // ═════════════════════════════════════════════════
-    //  searchEntities — JVM 暴力搜索排序与截断
-    // ═════════════════════════════════════════════════
-
-    @Nested
-    class JVM暴力搜索排序与截断 {
-
-        @SuppressWarnings("unchecked")
-        @Test
-        void 结果按相似度降序排列() {
-            var searcher = new VectorSearcher(vectorJdbcTemplate, embeddingRouter, true, DIMENSIONS);
-            when(embeddingRouter.embed("排序测试", EmbeddingUseCase.MEMORY, null, null))
-                    .thenReturn(uniformVector(1.0f));
-
-            // 强制降级
-            when(vectorJdbcTemplate.query(anyString(), any(RowMapper.class), any(), anyInt()))
-                    .thenThrow(new RuntimeException("强制降级"));
-            // 乱序结果
-            when(vectorJdbcTemplate.query(anyString(), any(RowMapper.class)))
-                    .thenReturn(List.of(
-                            new VectorSearchResult("low", 0.5f),
-                            new VectorSearchResult("high", 0.9f),
-                            new VectorSearchResult("mid", 0.7f)
-                    ));
-
-            var results = searcher.searchEntities("排序测试", 10, 0.0f);
-
-            assertThat(results).extracting(VectorSearchResult::entityId)
-                    .containsExactly("high", "mid", "low");
-            assertThat(results).extracting(VectorSearchResult::similarity)
-                    .isSortedAccordingTo((a, b) -> Float.compare(b, a));
+            org.assertj.core.api.Assertions.assertThatThrownBy(() ->
+                    searcher.searchEntities("null结果", 5, 0.5f))
+                    .isInstanceOf(IllegalStateException.class)
+                    .hasMessageContaining("向量检索 SQL 查询返回 null");
         }
 
         @SuppressWarnings("unchecked")
         @Test
-        void topK限制截断结果() {
+        void vec查询返回null元素时应直接失败() {
             var searcher = new VectorSearcher(vectorJdbcTemplate, embeddingRouter, true, DIMENSIONS);
-            when(embeddingRouter.embed("topK降级", EmbeddingUseCase.MEMORY, null, null))
+            when(embeddingRouter.embed("null元素", EmbeddingUseCase.MEMORY, null, null))
                     .thenReturn(uniformVector(1.0f));
-
             when(vectorJdbcTemplate.query(anyString(), any(RowMapper.class), any(), anyInt()))
-                    .thenThrow(new RuntimeException("强制降级"));
-            when(vectorJdbcTemplate.query(anyString(), any(RowMapper.class)))
-                    .thenReturn(List.of(
-                            new VectorSearchResult("e1", 0.95f),
-                            new VectorSearchResult("e2", 0.90f),
-                            new VectorSearchResult("e3", 0.85f),
-                            new VectorSearchResult("e4", 0.80f)
-                    ));
+                    .thenReturn(java.util.Arrays.asList(new VectorSearchResult("ok", 0.9f), null));
 
-            var results = searcher.searchEntities("topK降级", 2, 0.0f);
-
-            assertThat(results).hasSize(2);
-            assertThat(results).extracting(VectorSearchResult::entityId)
-                    .containsExactly("e1", "e2");
-        }
-
-        @SuppressWarnings("unchecked")
-        @Test
-        void 阈值过滤与topK截断组合生效() {
-            var searcher = new VectorSearcher(vectorJdbcTemplate, embeddingRouter, true, DIMENSIONS);
-            when(embeddingRouter.embed("组合过滤", EmbeddingUseCase.MEMORY, null, null))
-                    .thenReturn(uniformVector(1.0f));
-
-            when(vectorJdbcTemplate.query(anyString(), any(RowMapper.class), any(), anyInt()))
-                    .thenThrow(new RuntimeException("强制降级"));
-            when(vectorJdbcTemplate.query(anyString(), any(RowMapper.class)))
-                    .thenReturn(List.of(
-                            new VectorSearchResult("above-1", 0.9f),
-                            new VectorSearchResult("above-2", 0.8f),
-                            new VectorSearchResult("above-3", 0.7f),
-                            new VectorSearchResult("below", 0.3f)
-                    ));
-
-            // 阈值 0.5 过滤掉 below(0.3)，topK 2 取前 2 条
-            var results = searcher.searchEntities("组合过滤", 2, 0.5f);
-
-            assertThat(results).hasSize(2);
-            assertThat(results).extracting(VectorSearchResult::entityId)
-                    .containsExactly("above-1", "above-2");
+            org.assertj.core.api.Assertions.assertThatThrownBy(() ->
+                    searcher.searchEntities("null元素", 5, 0.5f))
+                    .isInstanceOf(IllegalStateException.class)
+                    .hasMessageContaining("向量检索 SQL 查询返回 null 元素");
         }
     }
 
@@ -426,24 +368,15 @@ class VectorSearcher_单元测试 {
         }
 
         @Test
-        void 扩展未加载时跳过_不调用embedding和数据库() {
-            var searcher = new VectorSearcher(vectorJdbcTemplate, embeddingRouter, false, DIMENSIONS);
-
-            searcher.upsertEntityVector("entity-1", "实体文本");
-
-            verifyNoInteractions(embeddingRouter);
-            verify(vectorJdbcTemplate, never()).update(anyString(), any(Object[].class));
-        }
-
-        @Test
-        void embedding失败时不写库_不抛异常() {
+        void embedding失败时应抛出且不写库() {
             var searcher = new VectorSearcher(vectorJdbcTemplate, embeddingRouter, true, DIMENSIONS);
             when(embeddingRouter.embed(anyString(), any(), any(), any()))
                     .thenThrow(new RuntimeException("向量化失败"));
 
-            assertThatCode(() ->
-                    searcher.upsertEntityVector("entity-1", "实体文本")
-            ).doesNotThrowAnyException();
+            org.assertj.core.api.Assertions.assertThatThrownBy(() ->
+                    searcher.upsertEntityVector("entity-1", "实体文本"))
+                    .isInstanceOf(RuntimeException.class)
+                    .hasMessageContaining("向量化失败");
 
             // DELETE 和 INSERT 都不应被调用
             verify(vectorJdbcTemplate, never()).update(eq("DELETE FROM entity_embeddings WHERE entity_id = ?"), (Object) any());
@@ -451,32 +384,37 @@ class VectorSearcher_单元测试 {
         }
 
         @Test
-        void 数据库DELETE失败时整体不抛异常() {
+        void 数据库DELETE失败时应抛出() {
             var searcher = new VectorSearcher(vectorJdbcTemplate, embeddingRouter, true, DIMENSIONS);
             when(embeddingRouter.embed("文本", EmbeddingUseCase.MEMORY, null, null))
                     .thenReturn(uniformVector(0.5f));
             when(vectorJdbcTemplate.update(
                     eq("DELETE FROM entity_embeddings WHERE entity_id = ?"), eq("entity-1")))
-                    .thenThrow(new DataAccessException("磁盘已满") {});
+                    .thenThrow(new RuntimeException("磁盘已满"));
 
-            assertThatCode(() ->
-                    searcher.upsertEntityVector("entity-1", "文本")
-            ).doesNotThrowAnyException();
+            org.assertj.core.api.Assertions.assertThatThrownBy(() ->
+                    searcher.upsertEntityVector("entity-1", "文本"))
+                    .isInstanceOf(RuntimeException.class)
+                    .hasMessageContaining("磁盘已满");
         }
 
         @Test
-        void 数据库INSERT失败时不抛异常() {
+        void 数据库INSERT失败时应抛出() {
             var searcher = new VectorSearcher(vectorJdbcTemplate, embeddingRouter, true, DIMENSIONS);
             when(embeddingRouter.embed("文本", EmbeddingUseCase.MEMORY, null, null))
                     .thenReturn(uniformVector(0.5f));
+            when(vectorJdbcTemplate.update(
+                    eq("DELETE FROM entity_embeddings WHERE entity_id = ?"), eq("entity-1")))
+                    .thenReturn(1);
             when(vectorJdbcTemplate.update(
                     eq("INSERT INTO entity_embeddings(entity_id, embedding) VALUES(?, ?)"),
                     eq("entity-1"), any(byte[].class)))
                     .thenThrow(new RuntimeException("INSERT 失败"));
 
-            assertThatCode(() ->
-                    searcher.upsertEntityVector("entity-1", "文本")
-            ).doesNotThrowAnyException();
+            org.assertj.core.api.Assertions.assertThatThrownBy(() ->
+                    searcher.upsertEntityVector("entity-1", "文本"))
+                    .isInstanceOf(RuntimeException.class)
+                    .hasMessageContaining("INSERT 失败");
         }
     }
 
@@ -499,36 +437,16 @@ class VectorSearcher_单元测试 {
         }
 
         @Test
-        void 扩展未加载时跳过删除() {
-            var searcher = new VectorSearcher(vectorJdbcTemplate, embeddingRouter, false, DIMENSIONS);
-
-            searcher.deleteEntityVector("entity-456");
-
-            verify(vectorJdbcTemplate, never()).update(anyString(), any(Object[].class));
-        }
-
-        @Test
-        void DataAccessException时不抛出() {
+        void 删除失败时应抛出() {
             var searcher = new VectorSearcher(vectorJdbcTemplate, embeddingRouter, true, DIMENSIONS);
             when(vectorJdbcTemplate.update(
                     eq("DELETE FROM entity_embeddings WHERE entity_id = ?"), eq("entity-1")))
-                    .thenThrow(new DataAccessException("表不存在") {});
+                    .thenThrow(new RuntimeException("表不存在"));
 
-            assertThatCode(() ->
-                    searcher.deleteEntityVector("entity-1")
-            ).doesNotThrowAnyException();
-        }
-
-        @Test
-        void RuntimeException时不抛出() {
-            var searcher = new VectorSearcher(vectorJdbcTemplate, embeddingRouter, true, DIMENSIONS);
-            when(vectorJdbcTemplate.update(
-                    eq("DELETE FROM entity_embeddings WHERE entity_id = ?"), eq("entity-1")))
-                    .thenThrow(new RuntimeException("未知错误"));
-
-            assertThatCode(() ->
-                    searcher.deleteEntityVector("entity-1")
-            ).doesNotThrowAnyException();
+            org.assertj.core.api.Assertions.assertThatThrownBy(() ->
+                    searcher.deleteEntityVector("entity-1"))
+                    .isInstanceOf(RuntimeException.class)
+                    .hasMessageContaining("表不存在");
         }
     }
 
@@ -538,6 +456,65 @@ class VectorSearcher_单元测试 {
 
     @Nested
     class 边界条件 {
+
+        @Test
+        void 非法查询参数应直接失败() {
+            var searcher = new VectorSearcher(vectorJdbcTemplate, embeddingRouter, true, DIMENSIONS);
+
+            org.assertj.core.api.Assertions.assertThatThrownBy(() -> searcher.searchEntities(" ", 1, 0.5f))
+                    .isInstanceOf(IllegalArgumentException.class)
+                    .hasMessageContaining("向量检索查询文本不能为空");
+            org.assertj.core.api.Assertions.assertThatThrownBy(() -> searcher.searchEntities("query", 0, 0.5f))
+                    .isInstanceOf(IllegalArgumentException.class)
+                    .hasMessageContaining("topK 必须大于 0");
+            org.assertj.core.api.Assertions.assertThatThrownBy(() -> searcher.searchEntities("query", 1, -0.1f))
+                    .isInstanceOf(IllegalArgumentException.class)
+                    .hasMessageContaining("threshold 必须在 [0,1] 范围内");
+            org.assertj.core.api.Assertions.assertThatThrownBy(() -> searcher.searchEntities("query", 1, Float.NaN))
+                    .isInstanceOf(IllegalArgumentException.class)
+                    .hasMessageContaining("threshold 必须在 [0,1] 范围内");
+        }
+
+        @Test
+        void 候选ID包含空值时应直接失败() {
+            var searcher = new VectorSearcher(vectorJdbcTemplate, embeddingRouter, true, DIMENSIONS);
+
+            org.assertj.core.api.Assertions.assertThatThrownBy(() ->
+                    searcher.searchEntities("query", 5, 0.5f, Set.of("ok", " ")))
+                    .isInstanceOf(IllegalArgumentException.class)
+                    .hasMessageContaining("entityId 不能为空");
+        }
+
+        @Test
+        void 空候选ID集合返回空且不调用embedding() {
+            var searcher = new VectorSearcher(vectorJdbcTemplate, embeddingRouter, true, DIMENSIONS);
+
+            var results = searcher.searchEntities("query", 5, 0.5f, Set.of());
+
+            assertThat(results).isEmpty();
+            verify(embeddingRouter, never()).embed(anyString(), any(), any(), any());
+        }
+
+        @Test
+        void 写入和删除遇到非法entityId应直接失败() {
+            var searcher = new VectorSearcher(vectorJdbcTemplate, embeddingRouter, true, DIMENSIONS);
+
+            org.assertj.core.api.Assertions.assertThatThrownBy(() -> searcher.upsertEntityVector(" ", "文本"))
+                    .isInstanceOf(IllegalArgumentException.class)
+                    .hasMessageContaining("entityId 不能为空");
+            org.assertj.core.api.Assertions.assertThatThrownBy(() -> searcher.deleteEntityVector(" entity "))
+                    .isInstanceOf(IllegalArgumentException.class)
+                    .hasMessageContaining("entityId 不能包含首尾空白");
+        }
+
+        @Test
+        void 写入遇到空文本应直接失败() {
+            var searcher = new VectorSearcher(vectorJdbcTemplate, embeddingRouter, true, DIMENSIONS);
+
+            org.assertj.core.api.Assertions.assertThatThrownBy(() -> searcher.upsertEntityVector("entity-1", " "))
+                    .isInstanceOf(IllegalArgumentException.class)
+                    .hasMessageContaining("向量写入文本不能为空");
+        }
 
         @SuppressWarnings("unchecked")
         @Test
@@ -629,7 +606,7 @@ class VectorSearcher_单元测试 {
     @SuppressWarnings("unchecked")
     @Property(tries = 200)
     void searchEntities对任意参数组合永不抛异常(
-            @ForAll("任意查询文本") String queryText,
+            @ForAll("合法文本") String queryText,
             @ForAll @IntRange(min = 1, max = 100) int topK,
             @ForAll @FloatRange(min = 0.0f, max = 1.0f) float threshold) {
 
@@ -648,11 +625,11 @@ class VectorSearcher_单元测试 {
     }
 
     /**
-     * 属性测试：embedding 随机异常时 searchEntities 安全返回空列表。
+     * 属性测试：embedding 随机异常时 searchEntities 直接暴露失败。
      */
     @Property(tries = 100)
-    void embedding异常时searchEntities安全返回空(
-            @ForAll("任意查询文本") String queryText) {
+    void embedding异常时searchEntities抛出(
+            @ForAll("合法文本") String queryText) {
 
         JdbcTemplate mockJdbc = mock(JdbcTemplate.class);
         EmbeddingRouter mockRouter = mock(EmbeddingRouter.class);
@@ -661,18 +638,19 @@ class VectorSearcher_单元测试 {
 
         var searcher = new VectorSearcher(mockJdbc, mockRouter, true, DIMENSIONS);
 
-        var results = searcher.searchEntities(queryText, 5, 0.5f);
-
-        assertThat(results).isEmpty();
+        org.assertj.core.api.Assertions.assertThatThrownBy(() ->
+                searcher.searchEntities(queryText, 5, 0.5f))
+                .isInstanceOf(RuntimeException.class)
+                .hasMessageContaining("随机向量化失败");
     }
 
     /**
-     * 属性测试：upsertEntityVector 在任意 entityId 和 text 下永不抛异常。
+     * 属性测试：upsertEntityVector 在任意合法 entityId 和 text 下永不抛异常。
      */
     @Property(tries = 100)
-    void upsertEntityVector对任意输入永不抛异常(
-            @ForAll("任意查询文本") String entityId,
-            @ForAll("任意查询文本") String text) {
+    void upsertEntityVector对任意合法输入永不抛异常(
+            @ForAll("合法ID") String entityId,
+            @ForAll("合法文本") String text) {
 
         JdbcTemplate mockJdbc = mock(JdbcTemplate.class);
         EmbeddingRouter mockRouter = mock(EmbeddingRouter.class);
@@ -685,10 +663,26 @@ class VectorSearcher_单元测试 {
                 .doesNotThrowAnyException();
     }
 
-    @Provide("任意查询文本")
-    Arbitrary<String> 任意查询文本() {
+    @Property(tries = 50)
+    void 非法相似度构造VectorSearchResult失败(@ForAll("非法相似度") float similarity) {
+        org.assertj.core.api.Assertions.assertThatThrownBy(() ->
+                new VectorSearchResult("entity", similarity))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("similarity 必须在 [0,1] 范围内");
+    }
+
+    @Test
+    void entityId含首尾空白时构造VectorSearchResult失败() {
+        org.assertj.core.api.Assertions.assertThatThrownBy(() ->
+                new VectorSearchResult(" entity ", 0.9f))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("entityId 不能包含首尾空白");
+    }
+
+    @Provide("合法文本")
+    Arbitrary<String> 合法文本() {
         var chineseChars = Arbitraries.chars().range('\u4e00', '\u9fff');
-        var asciiChars = Arbitraries.chars().ascii();
+        var asciiChars = Arbitraries.chars().alpha();
         var mixed = Arbitraries.frequencyOf(
                 Tuple.of(2, asciiChars),
                 Tuple.of(3, chineseChars));
@@ -699,5 +693,25 @@ class VectorSearcher_单元测试 {
                     chars.forEach(sb::append);
                     return sb.toString();
                 });
+    }
+
+    @Provide("合法ID")
+    Arbitrary<String> 合法ID() {
+        return Arbitraries.strings()
+                .withChars("abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-_")
+                .ofMinLength(1)
+                .ofMaxLength(50);
+    }
+
+    @Provide("非法相似度")
+    Arbitrary<Float> 非法相似度() {
+        return Arbitraries.of(
+                -0.001f,
+                -1.0f,
+                1.001f,
+                2.0f,
+                Float.NaN,
+                Float.POSITIVE_INFINITY,
+                Float.NEGATIVE_INFINITY);
     }
 }
